        Class Triangulation<dim>:
            - New routines hasLocks(), lockBoundary(), and unlockAll(), to
              work with locked top-dimensional simplices and their facets.
            - New routine reorderBFS(), which essentially makes the old
              Triangulation<3>::reorderTetrahedraBFS() available in all
              dimensions.
            - New routine hash(), which uses the tight encoding.
            - New routines dot() and writeDot().
            - The two-argument copy constructor is now a three-argument
              copy constructor, giving an additional boolean option for
              whether to clone simplex/facet locks.
            - Renamed simplifiedFundamentalGroup to setGroupPresentation().
              The old name is deprecated but kept for backwards compatibility.
            - Overhaul of the internal change span classes, including a new
              inner class ChangeAndClearSpan.
        Class Triangulation<3>:
            - Routine puncture() now takes an optional triangle, not an
              optional tetrahedron.  The old version is kept but deprecated.
            - Routine insertLayeredSolidTorus() is now non-recursive, and
              throws an exception if its preconditions fail.
            - Routines layerOn(), pinchEdge() and puncture() now throw an
              exception if their preconditions fail.
            - Routine reorderTetrahedraBFS() is now a deprecated alias for
              reorderBFS() (which is available in all dimensions).
        Class Triangulation<4>:
            - New routine simplifyUpDown(); thanks to Rhuaidi Burke.
        Class Vector<T>:
            - Added support for tight encodings and decodings.
            - New routine hash(), which uses the tight encoding.
        Function columnEchelonForm():
            - Cleaned up and relaxed the preconditions.
            - Now checks its preconditions and throws an exception if they fail.
        Function foreach_constexpr():